--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
+    <script src="https://code.highcharts.com/stock/highstock.js"></script>
     <script src="raw_data.js"></script>
-    <script src="script.js"></script>
-    <title>For Loop</title>
+    <title>Test Highstock</title>
   </head>
-  <body></body>
+  <body>
+    <div id="hourly" style="width:100%; height:400px;"></div>
+    <div id="daily" style="width:100%; height:400px;"></div>
+  </body>
+  <script src="script.js"></script>
 </html>
